--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,14 @@
 
       <div class="jumbotron">
         <h1>YouOne</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
-        <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-            <div id="player"></div>
+        <p class="lead">Let's play two YouTube videos at once!</p>
+        <p><a class="btn btn-lg" href="#">Play!<span class="glyphicon glyphicon-ok"></span></a></p>
+        <div id='youtubes'>
+          <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+          <div id="player"></div>
+        </div>
+
+
       </div>
 
       <div class="footer">
