changed some stylings, tabling the project for now

--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,9 @@
       </div>
 
       <div class="jumbotron">
-        <h1>YouOne</h1>
+        <h1>You2ube</h1>
         <p class="lead">Let's play two YouTube videos at once!</p>
-        <p><a class="btn btn-lg" href="#">Play!<span class="glyphicon glyphicon-ok"></span></a></p>
+        <p><a class="btn btn-lg" id='playButton'><span class="glyphicon glyphicon-play"></span></a></p>
         <div id='youtubes'>
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
           <div id="player"></div>
